--- a/src/app/components/direccion-entrega/direccion-entrega.component.html
+++ b/src/app/components/direccion-entrega/direccion-entrega.component.html
@@ -10,8 +10,8 @@
     <main class="container my-3">
         <select class="form-control" [(ngModel)]="opcionSeleccionada" name="opcionSeleccionada">
             <option value=''>Seleccione su método de Pago</option>
-            <option value="tarjeta">Tarjeta contra entrega</option>
-            <option value="efectivo">Efectivo</option>
+            <option value="Tarjeta">Tarjeta contra entrega</option>
+            <option value="Efectivo">Efectivo</option>
         </select>
     </main>
 
