--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -1,37 +1,15 @@
 <main class="container" style="min-height: 100vh;">
-    <div class="card my-2">
+    <div class="card my-2" *ngFor="let pedido of pedidos">
         <div class="row no-gutters my-2">
-            <div class="col-5 align-self-center">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
+            <div class="col-5 align-self-center px-3">
+                <img src="../../../assets/images/{{pedido.producto.imagenProducto}}" class="img-fluid" alt="">
             </div>
             <div class="col-7">
-                <h5 class="mt-2">Combo Coronel Burger</h5>
-                <h6>Monto: L. 150.00</h6>
-                <h6>Estado: Entregado</h6>
-            </div>
-        </div>
-    </div>
-    <div class="card my-2">
-        <div class="row no-gutters my-2">
-            <div class="col-5 align-self-center">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
-            </div>
-            <div class="col-7">
-                <h5 class="mt-2">Combo Coronel Burger</h5>
-                <h6>Monto: L. 150.00</h6>
-                <h6>Estado: Cancelado</h6>
-            </div>
-        </div>
-    </div>
-    <div class="card my-2">
-        <div class="row no-gutters my-2">
-            <div class="col-5 align-self-center">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
-            </div>
-            <div class="col-7">
-                <h5 class="mt-2">Combo Coronel Burger</h5>
-                <h6>Monto: L. 150.00</h6>
-                <h6>Estado: Entregado</h6>
+                <h5 class="mt-2">{{pedido.producto.nombreProducto}}</h5>
+                <h6>{{pedido.producto.nombreRestaurante}}</h6>
+                <h6>Monto: L. {{pedido.monto}}.00</h6>
+                <h6>Estado: {{pedido.estado}}</h6>
+                <a class="" routerLink="{{pedido._id}}">Información Pedido</a>
             </div>
         </div>
     </div>
