Solucion de pequeños errores, pero ya todo esta bien :3

--- a/src/app/components/detalle-pedido/detalle-pedido.component.html
+++ b/src/app/components/detalle-pedido/detalle-pedido.component.html
@@ -10,7 +10,7 @@
                 <h5 class="mt-2">{{informacionPedido.producto.nombreProducto}}</h5>
                 <h6 class="mb-0">{{informacionPedido.producto.nombreRestaurante}}</h6>
                 <h6 class="mb-0">Cantidad: {{informacionPedido.producto.cantidad}}</h6>
-                <h6 class="mb-0">Monto: {{informacionPedido.cantidad}}</h6>               
+                <h6 class="mb-0">Monto: L. {{informacionPedido.monto}}.00</h6>               
             </div>
         </div>
     </div>
