--- a/src/app/components/informacion-producto/informacion-producto.component.html
+++ b/src/app/components/informacion-producto/informacion-producto.component.html
@@ -3,7 +3,7 @@
 <main class="container my-3">
     <div class="card">
         <div class="text-center">
-            <img src="../../../assets/images/{{imagenProducto}}" class="img-fluid mt-0 mb-2" width="250" alt="">
+            <img src="http://localhost:8888/images/{{imagenProducto}}" class="img-fluid mt-0 mb-2" width="250" alt="">
         </div>
         <div class="">
             <div class="mx-2">
