--- a/src/app/components/menu-restaurante/menu-restaurante.component.html
+++ b/src/app/components/menu-restaurante/menu-restaurante.component.html
@@ -4,7 +4,7 @@
     <div class="card my-2" *ngFor="let producto of productos">
         <div class="row no-gutters">
             <div class="col-4 align-self-center">
-                <img src="../../../assets/images/{{producto.imagenProducto}}" class="img-fluid px-2" alt="">
+                <img src="http://localhost:8888/images/{{producto.imagenProducto}}" class="img-fluid px-2" alt="">
             </div>
             <div class="col-7">
                 <h5 class="mt-2">{{producto.nombreProducto}}</h5>
