--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -2,7 +2,7 @@
     <div class="card my-2" *ngFor="let pedido of pedidos">
         <div class="row no-gutters my-2">
             <div class="col-5 align-self-center px-3">
-                <img src="../../../assets/images/{{pedido.producto.imagenProducto}}" class="img-fluid" alt="">
+                <img src="http://localhost:8888/images/{{pedido.producto.imagenProducto}}" class="img-fluid" alt="">
             </div>
             <div class="col-7">
                 <h5 class="mt-2">{{pedido.producto.nombreProducto}}</h5>
