--- a/src/app/components/detalle-pedido/detalle-pedido.component.html
+++ b/src/app/components/detalle-pedido/detalle-pedido.component.html
@@ -4,7 +4,7 @@
     <div class="card my-2">
         <div class="row no-gutters">
             <div class="col-4 align-self-center">
-                <img src="../../../assets/images/{{informacionPedido.producto.imagenProducto}}" class="img-fluid px-2 py-2" alt="">
+                <img src="http://localhost:8888/images/{{informacionPedido.producto.imagenProducto}}" class="img-fluid px-2 py-2" alt="">
             </div>
             <div class="col-7">
                 <h5 class="mt-2">{{informacionPedido.producto.nombreProducto}}</h5>
