--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -4,7 +4,7 @@
     <div class="card my-2" *ngIf="producto !== null">
         <div class="row no-gutters">
             <div class="col-5 align-self-center">
-                <img src="../../../assets/images/{{producto.imagenProducto}}" class="img-fluid" alt="">
+                <img src="http://localhost:8888/images/{{producto.imagenProducto}}" class="img-fluid" alt="">
             </div>
             <div class="col-7">
                 <h5 class="mt-2">{{producto.nombreProducto}}</h5>
